# lettercards

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  MANIFEST.in  README.md  REWRITE-PLAN.md  cards.csv  conftest.py  deck-state.example.json  deck.csv  deck_state.py  draw_placeholders.py  generate.py  mcp_server.py  pictogram_workflow.py  process_photo.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/agents/: engineer.md
.claude/commands/: backlog.md  pr-review.md  session-start.md
.claude/hooks/: auto-rereview-on-push.sh  auto-review-on-pr-create.sh  check-bash-settings-write.sh  check-settings-change.sh  check-settings-prewrite.sh  session-start-github-check.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  tests.yml
docs/: architecture.md  mcp-setup.md  starter-deck-setup.md
docs/adr/: 001-persona-orchestration.md  002-testing-strategy.md  003-security-hook-architecture.md  README.md  template.md
docs/previews/: README.md
docs/superpowers/plans/: 2026-03-29-phase-1b-deck-state.md
fonts/: .gitkeep
images/: SOURCES.md
lettercards/: __init__.py  __main__.py  cli.py  deck.py  howto.py  layout.py  photos.py  render.py
lettercards/starter/: deck.csv
lettercards/starter/images/: SOURCES.md
starter/: deck.csv
starter-deck/: deck.csv
starter-deck/images/: SOURCES.md
starter/images/: SOURCES.md
tests/: test_cli.py  test_deck_state.py  test_generate.py  test_hooks.sh  test_lettercards.py  test_mcp_server.py  test_process_photo.py
