[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lettercards"
dynamic = ["version"]
description = "Printable A4 letter-learning cards for toddlers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "reportlab>=4",
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest", "pymupdf"]

[project.scripts]
lettercards = "lettercards.cli:main"

[project.urls]
Repository = "https://github.com/jvspl/lettercards"

[tool.setuptools]
packages = ["lettercards"]

[tool.setuptools.dynamic]
version = { attr = "lettercards.__version__" }

[tool.setuptools.package-data]
lettercards = ["starter/deck.csv", "starter/images/*.png", "starter/images/SOURCES.md",
               "fonts/*.ttf", "fonts/*.txt"]
